[package]
name = "pallet-bribedao"
version = "0.0.1"
authors = ["Composable Developers"]
homepage = "https://composable.finance"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-democracy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-vault = { default-features = false, path = "../vault", optional = true }
plotters = { version = "0.3.1", optional = true }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

composable-traits = { version = "0.0.1", path = "../composable-traits", default-features = false }

frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

serde = { version = '1', optional = true }
log = { version = "0.4.14", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies]
proptest = "0.9.6"
serde = "1.0.119"
hex-literal = "0.3.1"
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "b89b1f98fcf0f5c341fbef1d12bfd869a2f2a9fe" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "b89b1f98fcf0f5c341fbef1d12bfd869a2f2a9fe", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-timestamp = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-currency-factory = { path = "../currency-factory" }
pallet-vault = { path = "../vault" }

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-democracy/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "composable-traits/std",
    "pallet-vault/std",
]
