[package]
name = "pallet-call-filter"
version = "0.1.0"
authors = ["Composable Developers"]
homepage = "https://composable.finance"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-io= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
scale-info = { version = "1.0.0", features = ["derive"], default-features = false }
composable-traits = { path = "../../frame/composable-traits", default-features = false}
composable-support = { path = "../composable-support", default-features = false}

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
smallvec = "1.4.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"support/std",
	"system/std",
	"sp-io/std",
	"sp-std/std",
    "scale-info/std",
]
