[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "composable-maths"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.22" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive",] }
num-integer = "0.1.44"
num-traits = { version = "0.2.14", default-features = false }
rust_decimal = { version = "1.2", default-features = false, features = ["maths"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

composable-support = { path = "../composable-support", default-features = false }
composable-traits = { path = "../composable-traits", default-features = false }

[dev-dependencies]
plotters = "0.3.2"
polars = {version = "0.23.2", features = ["dtype-struct", "strings", "temporal", "describe", "performant", "rows", "lazy", "csv-file"]}
proptest = "1.0"
proptest-derive = "0.3.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rstest = "0.15.0"

[features]
default = ["std"]
std = ["codec/std", "frame-support/std", "sp-std/std", "scale-info/std"]
