[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "composable-support"
rust-version = "1.56"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = [
  "derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
  "derive",
] }

is_sorted = { version = "0.1.1", default-features = false }
serde = { version = "1.0.130", features = ["derive"], optional = true }

[dev-dependencies]
proptest = { version = "1.0" }
serde_json = "1.0.45"

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "sp-std/std",
  "scale-info/std",
  "serde",
]
