[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "composable-tests-helpers"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
scale-info = { version = "1.0", default-features = false, features = [
  "derive",
] }
serde = { version = "1", optional = true }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }


[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-runtime/std",
  "scale-info/std",
  "frame-support/std",
]
